lang/checker/tests/cases/fail/solve-type-ref/no_arguments.slt
type T<A: string> = A;
type B = T;